# AbstractTree

./: .buildinfo  CHANGES.html  CHANGES.md  LICENSE  README.md  __init__.py  api.html  conversions.py  export.py  genindex.html  index.html  installation.html  objects.inv  predicates.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  treeclasses.py  usage.html  usage_bundled.html
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/abstracttree/: adapters.html  binarytree.html  export.html  generics.html  heaptree.html  predicates.html  route.html  tree.html  utils.html
_modules/abstracttree/adapters/: adapters.html  heaptree.html
_modules/abstracttree/mixins/: trees.html
_sources/: CHANGES.md.txt  api.rst.txt  index.rst.txt  usage.rst.txt
abstracttree/: __init__.py  adapters.py  binarytree.py  conversions.py  export.py  heaptree.py  predicates.py  route.py  tree.py  treeclasses.py
doc/source/: conf.py  installation.rst
docs/: requirements.txt
docs/source/: CHANGES.md  api.rst  conf.py  index.rst  installation.rst  usage.rst  usage_bundled.rst
examples/: anytree_example.py  itertree_example.py  networkx_example.py  sklearn_example.py
experiments/: treeclasses_old.py
src/abstracttree/: __init__.py  _iterators.py  binarytree.py  export.py  generics.py  generics.pyi  heaptree.py  iterators.py  predicates.py  route.py  tree.py  utils.py
src/abstracttree/adapters/: __init__.py  adapters.py  heaptree.py
src/abstracttree/mixins/: __init__.py  _views.py  binarytree.py  tree.py  trees.py  views.py
tests/: test_downtree.py  test_export.py  test_generics.py  test_mutabletree.py  test_route.py  test_tree.py  test_treelike.py  test_uptree.py  tree_instances.py
