[project]
name = "abstracttree"
dynamic = ["version"]
authors = [
    {name = "lverweijen", email = "lauwerund@gmail.com"}
]
description = "Abstract base classes for tree data structures"
readme = "README.md"
requires-python = ">= 3.9"
keywords = [
    "tree",
    "datastructure",
    "hierarchy",
    "taxonomy",
    "newick",
    "graphviz",
    "mermaid",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
license = {text = "Apache License 2.0"}

[project.optional-dependencies]
export = [
    "Pillow >= 5.0",
    "matplotlib >= 3.0",
    "svglib >= 1.5.0",
]

[project.urls]
Homepage = "https://github.com/lverweijen/abstracttree"
Repository = "https://github.com/lverweijen/abstracttree"
Issues = "https://github.com/lverweijen/abstracttree/issues"
Changelog = "https://github.com/lverweijen/abstracttree/blob/main/changes.md"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py39"
src = ["src"]

[tool.ruff.format]
preview = true

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
