[metadata]
name = abstracttree
version = attr: abstracttree.__version__
author = lverweijen
author_email = lauwerund@gmail.com
url = https://github.com/lverweijen/abstracttree
description = Abstract base classes for tree data structures
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tree, datastructure, graphviz, mermaid, abc, visualization
license = Apache License 2.0
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Typing :: Typed

[options]
python_requires = >= 3.9
packages = find:

[options.packages.find]
include = abstracttree*

[options.extras_require]
pillow = Pillow >= 5.0